--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-redux-firebase": "^3.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-toastify": "^6.1.0",
     "redux": "^4.0.5",
+    "redux-firestore": "^0.14.0",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
