--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.1",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
@@ -11,6 +13,7 @@
     "react": "^17.0.1",
     "react-browser-router": "^2.1.2",
     "react-dom": "^17.0.1",
+    "react-persist": "^1.0.2",
     "react-redux": "^7.2.2",
     "react-redux-firebase": "^3.7.0",
     "react-router-dom": "^5.2.0",
@@ -18,6 +21,7 @@
     "react-toastify": "^6.1.0",
     "redux": "^4.0.5",
     "redux-firestore": "^0.14.0",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
