--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nuka-carousel": "^4.7.2",
     "react": "^17.0.1",
     "react-browser-router": "^2.1.2",
+    "react-debounce-input": "^3.2.3",
     "react-dom": "^17.0.1",
     "react-persist": "^1.0.2",
     "react-redux": "^7.2.2",
