--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-browser-router": "^2.1.2",
     "react-debounce-input": "^3.2.3",
     "react-dom": "^17.0.1",
+    "react-facebook-login": "^4.1.1",
     "react-persist": "^1.0.2",
     "react-redux": "^7.2.2",
     "react-redux-firebase": "^3.7.0",
