--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "firebase": "^8.0.2",
+    "nodemon": "^2.0.6",
     "nuka-carousel": "^4.7.2",
+    "razorpay": "^2.0.6",
     "react": "^17.0.1",
     "react-browser-router": "^2.1.2",
     "react-debounce-input": "^3.2.3",
