--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,31 +1,22 @@
 image: v12.18.3
 
-stages:
--deploy
--build
-
 cache:
-paths:
--node_modules/
+  paths:
+    - node_modules/
 
-build-pages:
-stage: build
-script: 
--rm -rf build
--CI=false npm install
--CI=false npm run build
--rm -rf public
--cp build/index.html build/404.html
--mv build public
-
-artifacts:
-paths:
--public
+before_script:
+  - rm -rf build
+  - CI=false npm install
 
 pages:
-stage: deploy
-script:
--ls
-artifacts:
-paths:
--public
+  stage: deploy
+  script:
+    - CI=false npm run build
+    - rm -rf public
+    - cp build/index.html build/404.html
+    - mv build public
+  artifacts:
+    paths:
+      - public
+  only:
+    - master
