--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,19 +4,24 @@ cache:
   paths:
     - node_modules/
 
-before_script:
-  - rm -rf build
-  - CI=false npm install
+stages:
+  - build
+  - test
 
-pages:
-  stage: deploy
+build:
+  stage: build
+  image: node
   script:
-    - CI=false npm run build
-    - rm -rf public
-    - cp build/index.html build/404.html
-    - mv build public
-  artifacts:
-    paths:
-      - public
-  only:
-    - master
+    - echo "Start building App"
+    - npm install
+    - npm build
+    - echo "Build successfully!"
+
+test:
+  stage: test
+  image: node
+  script:
+    - echo "Testing App"
+    - npm install
+    - CI=true npm test
+    - echo "Test successfully!"
